left pokedex side main layout

--- a/src/Components/Pokedex/Pokedex.scss
+++ b/src/Components/Pokedex/Pokedex.scss
@@ -9,12 +9,13 @@
   flex-direction: row;
   margin: auto;
   width: 75%;
-  height: 85%;
+  height: 100%;
   border: 1px solid black;
 }
 
 .pokedex-left {
   width: 50%;
+  height: 100%;
   border: 1px solid red;
 }
 
@@ -108,4 +109,54 @@
   border-radius: 50%;
   top: 2px;
   left: 2px;
+}
+
+.pokedex-left-bottom {
+  display: flex;
+  flex-direction: column;
+  border: 1px solid black;
+  border-radius: 2%;
+  margin: auto;
+  margin-top: 1em;
+  height: 55%;
+  width: 70%;
+  display: flex;
+}
+
+.pokedex-left-display {
+  margin: auto;
+  height: 90%;
+  width: 90%;
+  border: 1px solid green;
+}
+
+.pokedex-left-buttons {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  border: 1px solid black;
+  margin: auto;
+  padding: 1em;
+  margin-top: 1em;
+  width: 85%;
+  height: 18%;
+}
+
+.pokedex-buttons-left {
+  width: 30px;
+  height: 30px;
+  border: 1px solid black;
+  border-radius: 50%;
+}
+
+.pokedex-buttons-screen {
+  width: 55%;;
+  height: 60%;
+  border: 1px solid black;
+}
+
+.pokedex-buttons-right {
+  width: 30%;
+  height: 100%;
+  border: 1px solid black;
 }
