--- a/src/Components/Pokedex/Pokedex.scss
+++ b/src/Components/Pokedex/Pokedex.scss
@@ -182,3 +182,10 @@
   border: 1px solid black;
   font-size: 100%;
 }
+
+.pokedex-right-bottom {
+  border: 1px solid black;
+  margin: auto;
+  width: 75%;
+  height: 50%;
+}
