--- a/src/Components/Pokedex/Pokedex.scss
+++ b/src/Components/Pokedex/Pokedex.scss
@@ -223,6 +223,8 @@
 }
 
 .random-pokemon-container {
+  display: flex;
+  flex-direction: row;
   border: 1px solid black;
   width: 100%;
   height: 100%;
