Display 3 random pokemon on load

--- a/src/Components/Pokedex/Pokedex.scss
+++ b/src/Components/Pokedex/Pokedex.scss
@@ -225,6 +225,7 @@
 .random-pokemon-container {
   display: flex;
   flex-direction: row;
+  justify-content: space-between;
   border: 1px solid black;
   width: 100%;
   height: 100%;
