--- a/src/Components/Pokedex/Pokedex.scss
+++ b/src/Components/Pokedex/Pokedex.scss
@@ -187,11 +187,14 @@
 }
 
 .pokedex-searchbar {
+  font-family: 'Press Start 2P', cursive;
+  outline: none;
+  border-radius: 10px;
   margin-top: 0.5em;
   width: 100%;
   height: 50%;
-  border: 1px solid black;
   font-size: 100%;
+  border: none;
 }
 
 .pokedex-right-bottom {
@@ -219,7 +222,6 @@
   margin-top: 1em;
   width: 85%;
   height: 30%;
-  border: 1px solid black;
 }
 
 .random-pokemon-header {
@@ -230,7 +232,6 @@
   display: flex;
   flex-direction: row;
   justify-content: space-between;
-  border: 1px solid black;
   width: 100%;
   height: 100%;
 }
