--- a/src/Components/Pokedex/Pokedex.scss
+++ b/src/Components/Pokedex/Pokedex.scss
@@ -160,6 +160,11 @@
 }
 
 .pokedex-buttons-screen > h3 {
+  overflow: hidden;
+  text-overflow: ellipsis;
+  word-wrap: break-word;
+  display: block;
+  hyphens: auto;
   text-transform: capitalize;
 }
 
@@ -226,7 +231,7 @@
   border-radius: 10px;
   margin-top: 0.5em;
   width: 100%;
-  height: 50%;
+  height: 70%;
   font-size: 100%;
   border: none;
 }
