--- a/src/Components/Pokedex/Pokedex.scss
+++ b/src/Components/Pokedex/Pokedex.scss
@@ -219,12 +219,16 @@
 }
 
 .search-container {
+  position: relative;
   display: flex;
   flex-direction: column;
   align-items: center;
+  margin: auto;
+  // width: 100%;
 }
 
 .pokedex-searchbar {
+  position: relative;
   font-family: 'Press Start 2P', cursive;
   outline: none;
   border-radius: 10px;
@@ -251,7 +255,7 @@
   flex-direction: column;
   text-align: left;
   margin: auto;
-  width: 85%;
+  width: 83%;
   height: 65%;
   border: 2px solid black;
   border-radius: 5px;
@@ -353,16 +357,21 @@
 }
 
 .pokedex-search-input {
-  // position: relative;
-  // width: 100%;
+  position: relative;
+  width: 100%;
 }
 
 .search-predict {
-  // overflow: auto;
+  position: absolute;
+  // top: 66%;
+  top: 2.5em;
+  overflow: auto;
   width: 100%;
-  height: 20vh;
+  max-height: 46vh;
   background-color: white;
   z-index: 999;
+  border-bottom-left-radius: 10px;
+  border-bottom-right-radius: 10px;
 }
 
 .search-predict::-webkit-scrollbar {
