--- a/src/Components/Pokedex/Pokedex.scss
+++ b/src/Components/Pokedex/Pokedex.scss
@@ -224,6 +224,7 @@
   flex-direction: column;
   align-items: center;
   margin: auto;
+  z-index: 999;
   // width: 100%;
 }
 
@@ -237,11 +238,13 @@
   height: 2em;
   font-size: 100%;
   border: none;
+  z-index: 999;
 }
 
 .predict-true {
   border-bottom-left-radius: 0;
   border-bottom-right-radius: 0;
+  z-index: 999;
 }
 
 .pokedex-right-bottom {
@@ -359,17 +362,18 @@
 .pokedex-search-input {
   position: relative;
   width: 100%;
+  z-index: 999;
 }
 
 .search-predict {
   position: absolute;
   // top: 66%;
-  top: 2.5em;
+  top: 2.65em;
   overflow: auto;
   width: 100%;
   max-height: 46vh;
   background-color: white;
-  z-index: 999;
+  z-index: 99;
   border-bottom-left-radius: 10px;
   border-bottom-right-radius: 10px;
 }
@@ -387,4 +391,14 @@
 .search-predict::-webkit-scrollbar-thumb {
   border-radius: 10px;
   background-color: rgba(0, 0, 0, 0.65);
+}
+
+.search-prediction-results {
+  margin: 1em 0;
+}
+
+.search-prediction-results:hover {
+  cursor: pointer;
+  background-color: black;
+  color: white;
 }
