Animate sensor flash

--- a/src/Components/Pokedex/Pokedex.scss
+++ b/src/Components/Pokedex/Pokedex.scss
@@ -403,7 +403,7 @@
   color: white;
 }
 
-.sensor-animate-true {
+.animate-true {
   -webkit-animation-name: sensor-flash;
   -webkit-animation-duration: 0.5s;
 
